--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - ..:/workspace:cached
       # Enable if you require git cloning
       # - ${HOME}/.ssh:/home/frappe/.ssh
-    working_dir: /workspace/development
+    working_dir: /workspace/frappe-bench
     ports:
       - 8000-8005:8000-8005
       - 9000-9005:9000-9005
